--- a/sass/components/_socialmedia.scss
+++ b/sass/components/_socialmedia.scss
@@ -1,14 +1,14 @@
-.social-media{
-    &__list {
-        display: flex;
-        justify-content: center;
-    }
-    &__item{
+.social-media__list {
+    @extend %list;
+    display: flex;
+    justify-content: center;
+}
+.social-media__item{
         &:not(:last-child) {
             margin-right: 10px;
         }
     }
-    &__link {
+.social-media__link {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -26,11 +26,10 @@
             background-color: $accent-color;
         }
     }
-    &__icon {
-        width: 20px;
-        height: 20px;
+.social-media__icon {
+    width: 20px;
+    height: 20px;
         &:hover, &:focus {
             fill: $address;
         }
-    }
 }
