--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,35 +1,34 @@
-.features{
-    &__list{
-        display: flex;
-        justify-content: space-between;
+.features__list{
+    @extend %list;
+    display: flex;
+    justify-content: space-between;
     }
-    &__item{
-        width: 270px;
+.features__item{
+    width: 270px;
         
-        &:not(:last-child){
-            margin-right: 30px;
-        }
+    &:not(:last-child){
+        margin-right: 30px;
+    }
 
-    }
-    &__img {
-        display: flex;
-        justify-content: center;
+}
+.features__img {
+    display: flex;
+    justify-content: center;
         
-        padding: 25px 0;
-        margin-bottom: 30px;
-        background-color: $button-two;
-    }
-    &__icon {
-        width: 70px;
-        height: 70px;
-    }
-    &__title {
-        text-transform: uppercase;
-        margin-bottom: 10px;
-    }
-    &__text {
-        color: $title-text-color;
-        font-weight: 400;
-        line-height: 1.7;
-    }
+    padding: 25px 0;
+    margin-bottom: 30px;
+    background-color: $button-two;
+}
+.features__icon {
+    width: 70px;
+    height: 70px;
+}
+.features__title {
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+.features__text {
+    color: $title-text-color;
+    font-weight: 400;
+    line-height: 1.7;
 }
