--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,32 +1,26 @@
-.work{
-    &__list {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 50px;
-    }
-    &__image {
-        position: relative;
-        width: 100%;
-        background-size: contain;
-    }
-    &__image {
-        position: relative;
-        width: 100%;
-        background-size: contain;
-    }
-    &__title {
-        position: absolute;
-    
-        width: 100%;
-        bottom: 0;
-        margin: 0;
-        padding: 27px 0;
-    
-        text-align: center;
-        font-weight: 900;
-        text-transform: uppercase;
-        color: $address;
-    
-        background: rgba(47, 48, 58, 0.8);
-    }
+.work__list {
+    @extend %list;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.work__image {
+    position: relative;
+    width: 100%;
+    background-size: contain;
+}
+.work__title {
+    position: absolute;
+
+    width: 100%;
+    bottom: 0;
+    margin: 0;
+    padding: 27px 0;
+
+    text-align: center;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: $address;
+
+    background: rgba(47, 48, 58, 0.8);
 }
