--- a/sass/components/portfolio-main/_cardset.scss
+++ b/sass/components/portfolio-main/_cardset.scss
@@ -1,31 +1,18 @@
-.filter-nav{
-    &__list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    margin-bottom: 50px;
-    }
-    &__item:not(:first-child) {
-        margin-left: 8px;
-    }
-}
-
-.cardset{
-    &__list {
+.cardset__list {
+    @extend %list;
         display: flex;
         flex-wrap: wrap;
     
         margin-left: -30px;
         margin-top: -30px;
     }
-    &__item {
+    .cardset__item {
         flex-basis: calc(100% / 3 - 30px);
     
         margin-top: 30px;
         margin-left: 30px;
     }
-    &__link {
+    .cardset__link {
         display: block;
     
         transition: background 250ms $transition;
@@ -35,7 +22,7 @@
             box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
         }
     }
-    &__overlay {
+    .cardset__overlay {
         position: relative;
     
         display: block;
@@ -85,7 +72,7 @@
         }
     }
     
-    &__info{
+    .cardset__info{
         position: absolute;
 
         width: 100%;
@@ -108,7 +95,7 @@
         }
     }
         
-    &__description {
+    .cardset__description {
         padding: 20px 24px;
                 
         border-left: 1px solid #eeeeee;
@@ -116,17 +103,16 @@
         border-bottom: 1px solid #eeeeee;
     }
 
-    &__title {
+    .cardset__title {
         font-size: 18px;
         line-height: 2;
         letter-spacing: 0.06em;
         color: $primary-text-color;
     }
 
-    &__text {
+    .cardset__text {
         font-weight: 400;
         font-size: 16px;
         line-height: 1.8;
         color: $title-text-color;
     }
-}
