--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -28,7 +28,7 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         background-color: $accent-color;
     
-        transition: background-color 250ms $transition;
+        transition: background-color 250ms $transition, color 250ms $transition;
     
         &:focus, &:hover {
             cursor: pointer;
@@ -39,7 +39,7 @@
     &--secondary {
         background-color: $button-two;
     
-        transition: background-color 250ms $transition;
+        transition: background-color 250ms $transition, color 250ms $transition;
     
         &:focus, &:hover {
             color: $address;
