--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,5 +1,4 @@
-.clients__list {
-    @extend %list;
+.clients {
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
@@ -16,7 +15,7 @@
         border-radius: 4px;
         border: 1px solid $fill;
     
-        transition: fill 250ms $transition, color 250ms $transition;
+        transition: fill 250ms $transition, border 250ms $transition;
 
         &:focus, &:hover {
             border: 1px solid $accent-color;
@@ -32,11 +31,8 @@
 
         transition: fill 250ms $transition;
 
-        .clients__item:hover &, .clients__item:focus &{
-            color: $accent-color;
-            fill: $accent-color;
-        } 
         .clients__link:hover &, .clients__link:focus &{
         fill: $accent-color;
+        color: $accent-color;
         }
     }
