--- a/sass/components/modal/_modal-form-field.scss
+++ b/sass/components/modal/_modal-form-field.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-
+    margin: 0;
     margin-bottom: 10px;
 }
     .modal-form-field__label{
