--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -27,8 +27,7 @@ h3,
 p {
     margin: 0;
 }
-
-%list {
+ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -44,16 +43,22 @@ p {
     padding-top: 94px;
     padding-bottom: 94px;
 
-    &.color {
+    &--color {
+        padding-top: 94px;
+        padding-bottom: 94px;
         background-color: $button-two;
     }
-    &__title {
-        font-size: 36px;
-        line-height: 1.2;
-        text-align: center;
+    &--no-padding{
+        padding-bottom: 94px;
+        padding-top: 0;
     }
-}
 
+}
+.section__title {
+    font-size: 36px;
+    line-height: 1.2;
+    text-align: center;
+}
 .hidden {
     position: absolute;
     width: 1px;
@@ -80,7 +85,4 @@ textarea{
 }
 .no-margin{
     margin: 0;
-}
-.no-padding{
-    padding-top: 0;
 }
